--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     },
     "dependencies": {
         "axios": "^0.21.1",
-        "commander": "^7.2.0"
+        "chalk": "^4.1.0",
+        "commander": "^7.2.0",
+        "lodash": "^4.17.21"
     },
     "jest": {
         "testEnvironment": "node"
