--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
         "axios": "^0.21.1",
         "chalk": "^4.1.0",
         "commander": "^7.2.0",
-        "lodash": "^4.17.21"
+        "html-to-text": "^7.0.0",
+        "lodash": "^4.17.21",
+        "nodemailer": "^6.5.0"
     },
     "jest": {
         "testEnvironment": "node"
