--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "commander": "^7.2.0",
         "html-to-text": "^7.0.0",
         "lodash": "^4.17.21",
+        "mongoose": "^5.12.3",
         "nodemailer": "^6.5.0"
     },
     "jest": {
