--- a/package.json
+++ b/package.json
@@ -7,17 +7,13 @@
         "imzhao": "bin/imzhao.js"
     },
     "files": [
-        "package.json",
-        "README.md",
-        "LICENSE",
         "lib/",
         "bin/"
     ],
     "scripts": {
         "test": "jest",
         "test:watch": "jest --watch",
-        "test:watchall": "jest --watchAll",
-        "prepublishOnly": "npm test"
+        "test:watchall": "jest --watchAll"
     },
     "repository": {
         "type": "git",
