--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
         "html-to-text": "^7.0.0",
         "lodash": "^4.17.21",
         "mongoose": "^5.12.3",
-        "nodemailer": "^6.5.0"
+        "nodemailer": "^6.5.0",
+        "uuid": "^8.3.2"
     },
     "jest": {
         "testEnvironment": "node"
